// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pad lines with fewer cells from arg 1`] = `
"
╭──────╮   ╭──────╮
│ box1 │───│ box2 │
╰──────╯   ╰──────╯
   │                  
╭──────╮           
│ box3 │           
╰──────╯           
"
`;

exports[`pad lines with fewer cells from stdin 1`] = `
"
╭──────╮   ╭──────╮
│ box1 │───│ box2 │
╰──────╯   ╰──────╯
   │                  
╭──────╮           
│ box3 │           
╰──────╯           
"
`;

exports[`should fill in empty slots if a dot is present from arg 1`] = `
"
╭──────╮   ╭──────╮
│ box1 │───│ box2 │
╰──────╯   ╰──────╯
   │          │       
╭──────╮      │    
│ box3 │──────┤    
╰──────╯      │    
   │          │       
╭──────╮   ╭──────╮
│ box4 │───│ box5 │
╰──────╯   ╰──────╯
"
`;

exports[`should fill in empty slots if a dot is present from stdin 1`] = `
"
╭──────╮   ╭──────╮
│ box1 │───│ box2 │
╰──────╯   ╰──────╯
   │          │       
╭──────╮      │    
│ box3 │──────┤    
╰──────╯      │    
   │          │       
╭──────╮   ╭──────╮
│ box4 │───│ box5 │
╰──────╯   ╰──────╯
"
`;

exports[`should leave gaps in empty cells from arg 1`] = `
"
╭──────╮                ╭──────╮
│ box1 │                │ box2 │
╰──────╯                ╰──────╯
   │                       │       
╭──────╮   ╭────────╮   ╭──────╮
│ box3 │───│  box4  │───│ box5 │
╰──────╯   ╰────────╯   ╰──────╯
               │                   
           ╭────────╮           
           │ bottom │           
           ╰────────╯           
"
`;

exports[`should leave gaps in empty cells from stdin 1`] = `
"
╭──────╮                ╭──────╮
│ box1 │                │ box2 │
╰──────╯                ╰──────╯
   │                       │       
╭──────╮   ╭────────╮   ╭──────╮
│ box3 │───│  box4  │───│ box5 │
╰──────╯   ╰────────╯   ╰──────╯
               │                   
           ╭────────╮           
           │ bottom │           
           ╰────────╯           
"
`;

exports[`should render single box from arg 1`] = `
"
╭─────╮
│ box │
╰─────╯
"
`;

exports[`should render single box from stdin 1`] = `
"
╭─────╮
│ box │
╰─────╯
"
`;

exports[`should render three lines of boxes from arg 1`] = `
"
╭──────╮   ╭──────╮
│ box1 │───│ box2 │
╰──────╯   ╰──────╯
   │                  
╭──────╮           
│ box3 │           
╰──────╯           
   │                  
╭──────╮   ╭──────╮
│ box4 │───│ box5 │
╰──────╯   ╰──────╯
"
`;

exports[`should render three lines of boxes from stdin 1`] = `
"
╭──────╮   ╭──────╮
│ box1 │───│ box2 │
╰──────╯   ╰──────╯
   │                  
╭──────╮           
│ box3 │           
╰──────╯           
   │                  
╭──────╮   ╭──────╮
│ box4 │───│ box5 │
╰──────╯   ╰──────╯
"
`;

exports[`should render two boxes with lines between  from arg 1`] = `
"
╭──────╮   ╭──────╮
│ box1 │───│ box2 │
╰──────╯   ╰──────╯
"
`;

exports[`should render two boxes with lines between  from stdin 1`] = `
"
╭──────╮   ╭──────╮
│ box1 │───│ box2 │
╰──────╯   ╰──────╯
"
`;

exports[`should render two lines of boxes from arg 1`] = `
"
╭──────╮   ╭──────╮
│ box1 │───│ box2 │
╰──────╯   ╰──────╯
   │                  
╭──────╮           
│ box3 │           
╰──────╯           
"
`;

exports[`should render two lines of boxes from stdin 1`] = `
"
╭──────╮   ╭──────╮
│ box1 │───│ box2 │
╰──────╯   ╰──────╯
   │                  
╭──────╮           
│ box3 │           
╰──────╯           
"
`;

exports[`should tighten up for rows from arg 1`] = `
"
╭──────╮   ╭──────╮
│ box1 │───│ box2 │
╰──────╯   ╰──────╯
              │       
              │    
╭──────╮   ╭──────╮
│ box4 │───│ box5 │
╰──────╯   ╰──────╯
"
`;

exports[`should tighten up for rows from stdin 1`] = `
"
╭──────╮   ╭──────╮
│ box1 │───│ box2 │
╰──────╯   ╰──────╯
              │       
              │    
╭──────╮   ╭──────╮
│ box4 │───│ box5 │
╰──────╯   ╰──────╯
"
`;
